turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: '{' expected but 'case' found.
            case 1 => avance();
            ^Turmite:13: error: ')' expected but ';' found.
            case 1 => avance();
                              ^Turmite:14: error: '}' expected but 'case' found.
            case 2 => gauche();avance();
            ^Turmite:15: error: illegal start of definition
            case 4 => gauche();gauche();avance();
            ^Turmite:16: error: illegal start of definition
            case 8 => droite();avance();
            ^Turmite:21: error: expected start of definition
	override def run() { 
                 ^Turmite:36: error: eof expected but '}' found.
}
^